# cpp

./: .gitignore  README.md  cpp_software_design_notes.md
alexander_stepaniv/: .gitignore  WORKSPACE
alexander_stepaniv/homework/balanced_reduction/: BUILD  binary_counter.cpp  test_binary_counter.cpp
alexander_stepaniv/lectures/: README.md
alexander_stepaniv/lectures/lecture1/: lecture1.md
alexander_stepaniv/lectures/lecture1/code/: BUILD.bazel  count_operations.h  instrumented.h
alexander_stepaniv/lectures/lecture2/: lecture2.md
alexander_stepaniv/lectures/lecture3/: lecture3.md
alexander_stepaniv/lectures/lecture4/: lecture4.md
alexander_stepaniv/lectures/lecture5/: lecture5.md
alexander_stepaniv/lectures/lecture6/: lecture6.md
alexander_stepaniv/lectures/lecture7/: lecture7.md
alexander_stepaniv/lectures_code/lecture3/: instrumented.h
alexander_stepaniv/notes/: notes_alexander_stepaniv.md
basics/: README.md
basics/examples/basic_inheritence/: base.h  child.h  (+1 more)
basics/notes/: C Recap.md  C++.md
modern/notes/: constexpr.md  lambda_expressions.md  move_semantics.md  readme.md  smart_pointers.md  smart_pointers_concepts.md  uniform_initialization.md  unique_pointer.md
notes/: notes_alexander_stepaniv.md
other_examples/: readme.md
other_examples/returning_a_vector/: CMakeLists.txt  main.cpp  vector_populator.cpp  vector_populator.h
other_examples/std_arrays/: CMakeLists.txt  main.cpp  printer.h
udemy_modern_cpp/: notes.md
udemy_modern_cpp/notes/: constexpr.md  lambda_expressions.md  move_semantics.md  uniform_initialization.md
(+118 files in other folders)
